--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,32 @@
-/* General Styles */
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    line-height: 1.6;
+:root{
+    --primary-color: #005964;
+    --primary-gradient: linear-gradient(to left, var(--primary-color), #004149);
 }
 
-header {
-    background-color: #333;
+html {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    background: linear-gradient(to left, #0083a3, #00c0f0);
+    line-height: 1.6;
+    size: 100%;
+}
+
+header, footer {
+    background: var(--primary-gradient);
     color: white;
-    padding: 20px;
     text-align: center;
+    padding: 20px;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    background: var(--primary-gradient);
+    width: 100%;
 }
 
 nav ul {
@@ -20,25 +36,48 @@ nav ul {
 
 nav ul li {
     display: inline;
-    margin-right: 20px;
+    margin: 0 10px;
 }
 
 nav ul li a {
     color: white;
     text-decoration: none;
+    font-weight: bold;
+}
+
+nav ul li a:hover {
+    text-decoration: underline;
 }
 
 section {
     padding: 20px;
     margin: 20px;
+    background-color: #c0f6ff;
+    border-radius: 8px;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, .5);
 }
 
-footer {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 10px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+h2 {
+    color: var(--primary-color);
+}
+
+@media only screen and (max-width: 600px) {
+    header, footer {
+        padding: 10px;
+    }
+
+    nav {
+        display: flex;
+        gap: 20px;
+        justify-content: center;
+    }
+
+    section {
+        padding: 10px;
+        margin: 10px;
+    }
+
+    #contact{
+        margin-bottom: 90px;
+    }
 }
